--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,16 +4,16 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m1
     integrations:
-      app_store_connect: birdspen #назва ключа з код меджека, щось схоже на нейм апки
+      app_store_connect: boxlegend #назва ключа з код меджека, щось схоже на нейм апки
     environment:
       ios_signing:
         distribution_type: app_store
-        bundle_identifier: com.paramonenkoproj.app #тут бандл
+        bundle_identifier: com.khriapaproj.app #тут бандл
       vars:
-        BUNDLE_ID: "com.lavrykproj.app" #тут бандл
-        XCODE_WORKSPACE: "BirdsPen.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "BirdsPen" # <-- Put the name of your Xcode scheme here
-        APP_STORE_APPLE_ID: 6755719431 #тут ід додатка в стор
+        BUNDLE_ID: "com.khriapaproj.app" #тут бандл
+        XCODE_WORKSPACE: "BoxLegend.xcworkspace" # <-- Put the name of your Xcode workspace here
+        XCODE_SCHEME: "BoxLegend" # <-- Put the name of your Xcode scheme here
+        APP_STORE_APPLE_ID: 6755884012 #тут ід додатка в стор
       xcode: latest
       cocoapods: default
     scripts:
